objects/ASI_CRM_Competitor_Contract_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Competitor_Contract__c</fullName>
        <label>Competitor Contract</label>
        <referenceTo>ASI_CRM_Competitor_Contract__c</referenceTo>
        <relationshipLabel>Competitor Contract Items</relationshipLabel>
        <relationshipName>ASI_CRM_Competitor_Contract_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Volume_monthly__c</fullName>
        <label>Contract Volume (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3)</booleanFilter>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Brand__r.ASI_CRM_CN_Competitor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Competitor Contract Items</relationshipLabel>
        <relationshipName>ASI_CRM_Competitor_Contract_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_CR12WF__c</fullName>
        <label>Volume (CR12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitor Contract Item</label>
    <nameField>
        <displayFormat>CCL-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Contract Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Competitor_Contract_Item</fullName>
        <active>true</active>
        <label>CN Competitor Contract Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AN_CRM_CN_Check_Manufacturer</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(TEXT(ASI_CRM_Competitor_Contract__r.ASI_CRM_Manufacturer__c)=
 TEXT(ASI_CRM_Sub_brand__r.ASI_MFM_Brand__r.ASI_CRM_CN_Manufacturer__c))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Sub_brand__c</errorDisplayField>
        <errorMessage>Manufacturer of Sub-Brand does not equal to Competitor Contract&apos;s Manufacturer</errorMessage>
    </validationRules>
</CustomObject>